Use DM-Sans over DM-Mono, more readable, accessible and causes less overflow issues.

--- a/packages/front-end/src/App.css
+++ b/packages/front-end/src/App.css
@@ -45,7 +45,7 @@
 }
 
 .custom-date-picker .react-datepicker {
-  font-family: "DM Mono";
+  font-family: "DM Sans";
   background-color: #ede9dd;
   border: none;
 }
